--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tyler Hampton</title>
-    <link href="node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
-    <script src="node_modules\bootstrap\dist\js\bootstrap.min.js" defer></script>
+    <link href=".\node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
+    <script src=".\node_modules\bootstrap\dist\js\bootstrap.min.js" defer></script>
     <link href="stylesheet.css" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
   <body>
-    <h1>My Website</h1>
-    <p id="test">testing stylesheet</p>
+    <h1 >Tyler Hampton</h1>
+    <div>
+      <h2>Biography</h2>
+      <img src=".\assets\ProfilePic.jpg">
+      <div>
+        <h3>About Me</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+          Eveniet soluta nisi consectetur, vero sint est similique quaerat animi autem totam. 
+          Optio ratione molestias perferendis facilis similique obcaecati quas. Odio, nulla!</p>
+      </div>
+      <h3>Contact Information</h3>
+      <ul>
+        <li>phone</li>
+        <li>email</li>
+        <li>linkedIn</li>
+      </ul>
+    </div>
+    <div>
+      <h2>Education</h2>
+      <h3>Lake Dallas High School</h3>
+      <img src=".\assets\LakeDallasLogo.png">
+      <h3>Collin College</h3>
+      <img src=".\assets\CollinCollegeLogo.jpg">
+      <h3>University of North Texas</h3>
+      <img src=".\assets\UNTLogo.png">
+    </div>
+    <div>
+      <h2>Programming Experience</h2>
+      <h3>Programming Languages</h3>
+      <img src=".\assets\C++Logo.png">
+      <img src=".\assets\PythonLogo.jpg">
+      <img src=".\assets\MatlabLogo.jpg">
+      <img src=".\assets\CSharpeLogo.png">
+      <img src=".\assets\XamarinFormsLogo.png">
+      <img src=".\assets\SQLogo.png">
+      <img src=".\assets\JavascriptLogo.png">
+      <img src=".\assets\HTMLcssLogo.png">
+      <h3>Projects</h4>
+      <h4>Console Programs</h4>
+      <h4>Desktop Applications</h4>
+      <h4>Mobile Development</h4>
+      <h4>Web Development</h4>
+    </div>
+    <div>
+      <h2>Work Experience</h2>
+      <h3>Quiktrip</h3>
+      <h3>Pappy's Pet Lodge</h3>
+      <h3>Amazon</h3>
+      <h3>University of North Texas</h3>
+    </div>
   </body>
 </html>
