styled header, about and education

--- a/index.html
+++ b/index.html
@@ -10,49 +10,103 @@
     <script src="script.js" defer></script>
 </head>
   <body>
-    <h1 >Tyler Hampton</h1>
-    <div>
-      <h2>Biography</h2>
-      <img src=".\assets\ProfilePic.jpg">
-      <div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-6">
+        <h1 class="display-1">Tyler Hampton</h1>
+        </div>    <!--col-->
+        <div class="col-6">
+          <div class="row">
+            <div class="col">
+              <h3 class="display-5">Contact Information</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="display-6">Phone</div>
+              <p>123-456-7890</p>
+            </div>
+            <div class="col">
+              <div class="display-6">Email</div>
+              <p>tylerhampton@my.unt.edu</p>
+            </div>
+            <div class="col">
+              <div class="display-6">LinkedIn</div>
+              <p>LinkedIn: Name(link)</p>
+            </div>
+          </div>
+        </div>
+      </div>    <!--row-->
+    <div class="row">
+      <div class="col-6">
+        <h2>Biography</h2>
         <h3>About Me</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-          Eveniet soluta nisi consectetur, vero sint est similique quaerat animi autem totam. 
-          Optio ratione molestias perferendis facilis similique obcaecati quas. Odio, nulla!</p>
-      </div>
-      <h3>Contact Information</h3>
-      <ul>
-        <li>phone</li>
-        <li>email</li>
-        <li>linkedIn</li>
-      </ul>
-    </div>
-    <div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Eveniet soluta nisi consectetur, vero sint est similique quaerat animi autem totam. 
+            Optio ratione molestias perferendis facilis similique obcaecati quas. Odio, nulla!</p>
+      </div>    <!--col-->
+      <div class="col-6">
+        <img src=".\assets\ProfilePic.jpg" class="img-fluid">
+      </div>    <!--col-->
+    </div>    <!--row div-->
+          
+    <div class="row">
       <h2>Education</h2>
-      <h3>Lake Dallas High School</h3>
-      <img src=".\assets\LakeDallasLogo.png">
-      <h3>Collin College</h3>
-      <img src=".\assets\CollinCollegeLogo.jpg">
-      <h3>University of North Texas</h3>
-      <img src=".\assets\UNTLogo.png">
     </div>
-    <div>
+    <div class="row">
+      <div class="col">
+        <h3>Lake Dallas High School</h3>
+        <img src=".\assets\LakeDallasLogo.png">
+      </div>
+      <div class="col">
+        <h3>Collin College</h3>
+        <img src=".\assets\CollinCollegeLogo.jpg">
+      </div>
+      <div class="col">
+        <h3>University of North Texas</h3>
+        <img src=".\assets\UNTLogo.png">
+      </div>
+    </div> <!--row-->
+    <div class="row">
       <h2>Programming Experience</h2>
+    </div>
+    <div class="row">
       <h3>Programming Languages</h3>
-      <img src=".\assets\C++Logo.png">
-      <img src=".\assets\PythonLogo.jpg">
-      <img src=".\assets\MatlabLogo.jpg">
-      <img src=".\assets\CSharpeLogo.png">
-      <img src=".\assets\XamarinFormsLogo.png">
-      <img src=".\assets\SQLogo.png">
-      <img src=".\assets\JavascriptLogo.png">
-      <img src=".\assets\HTMLcssLogo.png">
+    </div>
+    <div class="row">
+      <div class="col">
+        <img src=".\assets\C++Logo.png" class="img-fluid">
+      </div>
+      <div class="col">
+        <img src=".\assets\PythonLogo.jpg" class="img-fluid">
+      </div>
+      <div class="col">
+        <img src=".\assets\MatlabLogo.jpg" class="img-fluid">
+      </div>
+      <div class="col">
+        <img src=".\assets\CSharpeLogo.png" class="img-fluid">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">  
+        <img src=".\assets\XamarinFormsLogo.png" class="img-fluid">
+      </div>
+      <div class="col">
+        <img src=".\assets\SQLogo.png" class="img-fluid">
+      </div>
+      <div class="col">
+        <img src=".\assets\JavascriptLogo.png" class="img-fluid">
+      </div>
+      <div class="col">
+        <img src=".\assets\HTMLcssLogo.png" class="img-fluid">
+      </div>
+    </div>
       <h3>Projects</h4>
       <h4>Console Programs</h4>
       <h4>Desktop Applications</h4>
       <h4>Mobile Development</h4>
       <h4>Web Development</h4>
-    </div>
+
     <div>
       <h2>Work Experience</h2>
       <h3>Quiktrip</h3>
@@ -60,5 +114,6 @@
       <h3>Amazon</h3>
       <h3>University of North Texas</h3>
     </div>
+  </div> <!--container div-->
   </body>
 </html>
