--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tyler Hampton</title>
-    <link href=".\node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
-    <script src=".\node_modules\bootstrap\dist\js\bootstrap.min.js" defer></script>
+    <link href=".\node_modules\bootstrap\dist\css\bootstrap.css" rel="stylesheet">
+    <script src=".\node_modules\bootstrap\dist\js\bootstrap.js" defer></script>
     <link href="stylesheet.css" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
