--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
   <body>
     <div class="container text-center">
-      <div class="row">
+      <div class="row bg-dark text-white">
         <div class="col-6">
         <h1 class="display-1">Tyler Hampton</h1>
         </div>    <!--col-->
@@ -23,97 +23,194 @@
           </div>
           <div class="row">
             <div class="col">
-              <div class="display-6">Phone</div>
+              <h4 class="display-6">Phone</h4>
               <p>123-456-7890</p>
             </div>
             <div class="col">
-              <div class="display-6">Email</div>
+              <h4 class="display-6">Email</h4>
               <p>tylerhampton@my.unt.edu</p>
             </div>
             <div class="col">
-              <div class="display-6">LinkedIn</div>
+              <h4 class="display-6">LinkedIn</h4>
               <p>LinkedIn: Name(link)</p>
             </div>
           </div>
         </div>
       </div>    <!--row-->
-    <div class="row">
+    <div class="row bg-secondary text-black">
       <div class="col-6">
-        <h2>Biography</h2>
-        <h3>About Me</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Eveniet soluta nisi consectetur, vero sint est similique quaerat animi autem totam. 
-            Optio ratione molestias perferendis facilis similique obcaecati quas. Odio, nulla!</p>
+        <h2 class="display-2"><strong>Biography</strong></h2>
+        <h3 class="display-4">About Me</h3>
+          <p>I am a student at the University of North Texas within the computer science program. My expected graduation date is fall of 2024.
+            I started working as a junior in high school and also started to attend classes at Collin College. At the time I was still undecided on a major
+             and so the lack of clarity as well as the challenge of trying to work full time and go to school delayed my academic progress a bit.
+              Nevertheless, upon deciding on computer science and programming as my future profession, I enrolled at UNT with a new strong conviction to learn
+               everything I needed to be competent in my future career. I still have much more to learn, however, through my studies I have gained enough to confidently
+                consider myself a programmer and my conviction to become a competent one continues to push me to explore, learn and practice more.
+          </p>
+          <p>I am a long time resident of the Denton area, where I still live. Currently I work as an Amazon fullfillment center associate and also at the University as a research assistant.
+          </p>
       </div>    <!--col-->
       <div class="col-6">
         <img src=".\assets\ProfilePic.jpg" class="img-fluid">
       </div>    <!--col-->
     </div>    <!--row div-->
           
-    <div class="row">
-      <h2>Education</h2>
+    <div class="row bg-dark text-white">
+      <h2 class="display-2">Education</h2>
     </div>
     <div class="row">
       <div class="col">
-        <h3>Lake Dallas High School</h3>
+        <h3 class="display-4">Lake Dallas High School</h3>
         <img src=".\assets\LakeDallasLogo.png">
       </div>
       <div class="col">
-        <h3>Collin College</h3>
+        <h3 class="display-4">Collin College</h3>
         <img src=".\assets\CollinCollegeLogo.jpg">
       </div>
       <div class="col">
-        <h3>University of North Texas</h3>
+        <h3 class="display-4">University of North Texas</h3>
         <img src=".\assets\UNTLogo.png">
       </div>
     </div> <!--row-->
-    <div class="row">
-      <h2>Programming Experience</h2>
+    <div class="row bg-dark text-white">
+      <h2 class="display-2">Programming Experience</h2>
+    </div>
+    <div class="row bg-secondary">
+      <h3 class="display-4 text-black"><strong>Programming Languages</strong></h3>
     </div>
     <div class="row">
-      <h3>Programming Languages</h3>
+    <div class="card-group">
+      <div class="card">
+        <img src=".\assets\C++Logo.png" class="card-img-top" alt="...">
+        <div class="card-body text-center py-4">
+          <h5 class="card-title">C++</h5>
+          <p class="card-text">Extensive use within the majority of courses taken at UNT. Comfortability with OOP functionality and the STL library.</p>
+          <p class="card-text"><small class="text-body-secondary">Knowledge Level: Advanced</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src=".\assets\PythonLogo.jpg" class="card-img-top" alt="...">
+        <div class="card-body  text-center py-4">
+          <h5 class="card-title">Python</h5>
+          <p class="card-text">Learned through personal projects involving the libraries numpy, pytorch, and pygame to explore machine learning.
+            Somewhat familar with the OOP functionality and some libraries.
+          </p>
+          <p class="card-text"><small class="text-body-secondary">Knowledge Level: Hobbiest</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src=".\assets\MatlabLogo.jpg" class="card-img-top" alt="...">
+        <div class="card-body  text-center py-4">
+          <h5 class="card-title">Matlab</h5>
+          <p class="card-text">Used to study numerical analysis and to develop desktop applications using Matlab's app designer as well.
+            Familiarity with using the OOP functionality, computing accurate advanced numerical calculations, and using additional Simulink libraries.
+          </p>
+          <p class="card-text"><small class="text-body-secondary">Knowledge Level: Advanced</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src=".\assets\CSharpeLogo.png" class="card-img-top" alt="...">
+        <div class="card-body  text-center py-4">
+          <h5 class="card-title">C#</h5>
+          <p class="card-text">Used to create a self study coaching app called Study Bug as well as some use in experimenting with the Unity game engine.</p>
+          <p class="card-text"><small class="text-body-secondary">Knowledge Level: Modest</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="row">
+      <div class="card-group">
+        <div class="card">
+          <img src=".\assets\XamarinFormsLogo.png" class="card-img-top" alt="...">
+          <div class="card-body  text-center py-4">
+            <h5 class="card-title">Xamarin Forms</h5>
+            <p class="card-text">Used this markup language in conjunction with C# and the .NET framework to develop a cross platform mobile app.</p>
+            <p class="card-text"><small class="text-body-secondary">Knowledge Level: Hobbiest</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src=".\assets\SQLogo.png" class="card-img-top" alt="...">
+          <div class="card-body  text-center py-4">
+            <h5 class="card-title">SQL</h5>
+            <p class="card-text">Main query language used in my database course work. An SQLite database was also implemented in the Study Bug app.</p>
+            <p class="card-text"><small class="text-body-secondary">Knowledge Level: Proficient</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src=".\assets\JavascriptLogo.png" class="card-img-top" alt="...">
+          <div class="card-body text-center py-4">
+            <h5 class="card-title">JavaScript</h5>
+            <p class="card-text">Some experience experimenting with visualizations using the P5.js library, exposure to Node.js, socket.io and the express library
+              for server side web applications and some website development in conjunction with AWS amplify.
+            </p>
+            <p class="card-text"><small class="text-body-secondary">Knowledge Level: Beginner</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src=".\assets\HTMLcssLogo.png" class="card-img-top" alt="...">
+          <div class="card-body text-center py-4">
+            <h5 class="card-title">HTML/CSS</h5>
+            <p class="card-text">Some experience building and styling different webpages. Some additional experience used in combination with the Bootstrap framework as well.</p>
+            <p class="card-text"><small class="text-body-secondary">Knowledge Level: Beginner</small></p>
+          </div>
+        </div>
+      </div>
+    </div> <!--row-->
+    <div class="row bg-dark text-white">
+      <h3 class="display-4">Projects</h3>
     </div>
     <div class="row">
       <div class="col">
-        <img src=".\assets\C++Logo.png" class="img-fluid">
-      </div>
-      <div class="col">
-        <img src=".\assets\PythonLogo.jpg" class="img-fluid">
-      </div>
-      <div class="col">
-        <img src=".\assets\MatlabLogo.jpg" class="img-fluid">
-      </div>
-      <div class="col">
-        <img src=".\assets\CSharpeLogo.png" class="img-fluid">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">  
-        <img src=".\assets\XamarinFormsLogo.png" class="img-fluid">
-      </div>
-      <div class="col">
-        <img src=".\assets\SQLogo.png" class="img-fluid">
-      </div>
-      <div class="col">
-        <img src=".\assets\JavascriptLogo.png" class="img-fluid">
-      </div>
-      <div class="col">
-        <img src=".\assets\HTMLcssLogo.png" class="img-fluid">
-      </div>
-    </div>
-      <h3>Projects</h4>
-      <h4>Console Programs</h4>
-      <h4>Desktop Applications</h4>
-      <h4>Mobile Development</h4>
-      <h4>Web Development</h4>
+        <h4 class="display-6">Console Programs</h4>
+        <p>Includes many different personal and school projects using many different languages. The most notable are:
+           A mock Lyft/Uber app in C++ that used OOP extensively. A Bash-like interpreter in C capable of multiprocess execution, piping, and signal handling.
+           The personal project of creating an AI capable of learning the game brick breaker in python.
+           And 
 
-    <div>
-      <h2>Work Experience</h2>
-      <h3>Quiktrip</h3>
-      <h3>Pappy's Pet Lodge</h3>
-      <h3>Amazon</h3>
-      <h3>University of North Texas</h3>
+        </p>
+      </div>
+      <div class="col">
+        <h4 class="display-6">Desktop Applications</h4>
+        <p>Application built as part of the undergrad research experience at UNT using Matlab's app designer.</p>
+      </div>
+      <div class="col">
+        <h4 class="display-6">Mobile Development</h4>
+        <p>Creation of the Study Bug virtual study coach app made using Xamarin Forms and C#</p>
+      </div>
+      <div class="col">
+        <h4 class="display-6">Web Development</h4>
+      </div>
+    </div> <!--row-->
+    <div class="row bg-secondary">
+      <h2 class="display-6 text-black"><Strong>Data Structures and Algorithims</Strong></h2>
+      <p class="lead text-black">link to leetcode profile here</p>
     </div>
+    <div class="row">
+      <h2 class="display-4 bg-dark text-white">Work Experience</h2>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h3 class="display-6">Quiktrip</h3>
+        <p class="p lead">2014-2021</p>
+        <p>Position: Clerk</p>
+      </div>
+      <div class="col">
+        <h3 class="display-6">Pappy's Pet Lodge</h3>
+        <p class="lead">2021-2022</p>
+        <p>Position: Senior Pet Tech</p>
+      </div>
+      <div class="col">
+        <h3 class="display-6">Amazon</h3>
+        <p class="lead">2022-Current</p>
+        <p>Position: Associate</p>
+      </div>
+      <div class="col">
+        <h3 class="display-6">University of North Texas</h3>
+        <p class="lead">2023-Current</p>
+        <p>Position: Undergrad Research Assistant</p>
+      </div>
+    </div> <!--row-->
   </div> <!--container div-->
   </body>
 </html>
